# Bob-Shooter

./: CMakeLists.txt  LICENSE  README.md  main.cpp  mingw-toolchain.cmake  settings.cpp  settings.h  world.cpp  world.h
entities/: entities.h  entity.h  typemarkers.h
entities/livingentities/: bob.cpp  bob.h  bullet.cpp  bullet.h  player.cpp  player.h
uuid/: uuid.cpp  uuid.h
